fix files API
