# backend/app/Http/Controllers/FileController.php
@@ -3,7 +3,6 @@
 namespace App\Http\Controllers;
 
 use App\Http\Requests\FileRequest;
-use App\Http\Requests\ImportFileRequest;
 use App\Services\FileService;
 use Illuminate\Http\Request;
 use OpenApi\Attributes as OA;
@@ -36,7 +35,8 @@ class FileController extends Controller
                                     new OA\Property(property: "id", type: "integer", example: 1),
                                     new OA\Property(property: "table_name", type: "string", example: "table_name"),
                                     new OA\Property(property: "row_id", type: "string", example: "1"),
-                                    new OA\Property(property: "filepath", type: "string"),
+                                    new OA\Property(property: "file_id", type: "string"),
+                                    new OA\Property(property: "filename", type: "string"),
                                 ]
                             )
                         )
@@ -78,7 +78,8 @@ class FileController extends Controller
                                 new OA\Property(property: "id", type: "integer"),
                                 new OA\Property(property: "table_name", type: "string"),
                                 new OA\Property(property: "row_id", type: "integer"),
-                                new OA\Property(property: "filepath", type: "string"),
+                                new OA\Property(property: "file_id", type: "string"),
+                                new OA\Property(property: "filename", type: "string"),
                             ]
                         )
                     ]
@@ -96,7 +97,7 @@ class FileController extends Controller
         ]);
     }
     #[OA\Post(
-        path: "/api/import-files",
+        path: "/api/files",
         summary: "Импорт данных файла",
         requestBody: new OA\RequestBody(
             required: true,
@@ -105,7 +106,8 @@ class FileController extends Controller
                 properties: [
                     new OA\Property(property: "table_name", type: "string", example: "table_name"),
                     new OA\Property(property: "row_id", type: "integer", example: 1),
-                    new OA\Property(property: "filepath", type: "string"),
+                    new OA\Property(property: "file_id", type: "string"),
+                    new OA\Property(property: "filename", type: "string"),
                 ]
             )
         ),
@@ -114,16 +116,14 @@ class FileController extends Controller
             new OA\Response(response: 200, description: "success"),
         ]
     )]
-
-    public function importUpload(ImportFileRequest $request) {
-        $fileDTO = $request->toDTO();
-        $this->fileService->importUpload($fileDTO);
-        return response()->json([
-            'success' => true
-        ]);
+    public function upload(FileRequest $request)
+    {
+        $fileDTO = $request->toFileDTO();
+        $this->fileService->create($fileDTO);
+        return response()->json(['success' => true]);
     }
     #[OA\Delete(
-        path: "/api/import-files/{id}",
+        path: "/api/files/{id}",
         summary: "Удалить данные о файле",
         tags: ["Files"],
         parameters: [
@@ -138,25 +138,6 @@ class FileController extends Controller
             new OA\Response(response: 200, description: "success"),
         ]
     )]
-
-    public function importDelete($id)
-    {
-        $this->fileService->importDelete($id);
-        return response()->json([
-            'success' => true
-        ]);
-    }
-    public function upload(FileRequest $request)
-    {
-        $fileDTO = $request->toFileDTO();
-        $this->fileService->upload($fileDTO);
-        return response()->json(['success' => true]);
-    }
-    public function download($id)
-    {
-        return $this->fileService->download($id);
-    }
-
     public function delete($id)
     {
         $this->fileService->delete($id);
