# backend/routes/api.php
@@ -136,13 +136,8 @@ Route::middleware([PrometheusMiddleware::class])->group(function () {
 
                 Route::get('/files', [FileController::class, 'all'])->name('files.all');
                 Route::get('/files/{id}', [FileController::class, 'getOne'])->name('files.get-one');
-                Route::get('/files/{id}/download', [FileController::class, 'download'])->name('files.download');
                 Route::post('/files', [FileController::class, 'upload'])->name('files.upload');
                 Route::delete('/files/{id}', [FileController::class, 'delete'])->name('files.delete');
-
-                Route::post('/import-files', [FileController::class, 'importUpload'])->name('files.import-upload');
-                Route::delete('/import-files/{id}', [FileController::class, 'importDelete'])->name('files.import-delete');
-
 
                 Route::get('/network-things', [NetworkThingController::class, 'all'])->name('network-things.all');
                 Route::get('/network-things/{id}', [NetworkThingController::class, 'getOne'])->name('network-things.get-one');
